# cmake_example

./: CMakeLists.txt  Installer.cmake  README.md  build_vs2017.bat  installscript.js
src/: main.cpp
src/qml/: main.qml
